--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_add_book">addBookActivity</string>
     <string name="book_name">Book Name :</string>
     <string name="book_price">Book Price :</string>
+    <string name="web_url">"http://ygoldsht.vlab.jct.ac.il/</string>
 </resources>
